# jvmgr

./: Cargo.toml  README.md
examples/: base-domain.drawio  gat_example.rs  gats_2.rs  simple_test.rs
src/: main.rs
src/command/: cmd_holder.rs  command.rs  current.rs  link.rs  ls.rs  mod.rs  unlink.rs  use_cmd.rs
src/command/env_operator/: env_operator.rs  mod.rs
src/config/: config.rs
tests/: inte_test.rs
