[package]
name = "java-versions-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name="jvmgr"
#path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0", default-features = false }
clap = { version = "3.2.16", features = ["derive"] }
directories = "4.0.1"
dotenv = "0.15.0"

